<resources>
    <string name="app_name">WB</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="recherchemenu">recherchemenu</string>
    <string name="incription">Inscription</string>
    <string name="connection">Connexion</string>
    <string name="mailtext">Entrez votre mail</string>
    <string name="passwordtext">Entrez votre password</string>
    <string name="inscriptionmail">Adresse mail</string>
    <string name="inscriptionmnom">Nom d\'utilisateur</string>
    <string name="inscriptionadresse">Adresse</string>
    <string name="inscriptionpassword1">Mot de passe</string>
    <string name="inscriptionpassword2">Confirmez votre mot de passe</string>
    <string name="inscription_ajouter_image">Bouton</string>
    <string name="inscription_bouton_confiramtion">Bouton_inscription</string>
    <string name="retour">retour</string>

    <string name="matiere">Choix matières </string>
    <string name="matiereC1">Retravailler</string>
    <string name="matiereC2">Maitriser</string>
    <string name="matiere_1">Français</string>
    <string name="matiere_2">Maths</string>
    <string name="matiere_3">Physique</string>
    <string name="matiere_4">Chimie</string>
    <string name="matiere_5">Histoire</string>
    <string name="matiere_6">Geographie</string>
    <string name="matiere_7">Anglais</string>
    <string name="matiere_8">Espagnol</string>
    <string name="matiere_9">Allemand</string>
    <string name="save">Sauvegarde</string>

    <string-array name="Matiere">
        <item>Tout</item>
        <item>Francais</item>
        <item>Maths</item>
        <item>Physique</item>
        <item>Chemie</item>
        <item>Histoire</item>
        <item>Geographie</item>
        <item>Anglais</item>
        <item>Espagnol</item>
        <item>Allemand</item>
    </string-array>
</resources>