<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FONT"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/retour"
        android:layout_width="63dp"
        android:layout_height="66dp"
        android:background="@color/FONT"
        android:contentDescription="@string/retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/inscriptionbas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/incription"
        android:scrollbarDefaultDelayBeforeFade="300"
        android:scrollbarFadeDuration="250"
        android:scrollbarSize="10dip"
        android:src="@drawable/inscriptionbas"
        android:translationY="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/inscriptionhaut"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:contentDescription="@string/incription"
        android:src="@drawable/inscriptionhaut"
        android:translationY="0dp"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inscriptionback2"
        android:layout_width="178dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/incription"
        android:textColor="@color/TEXT"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/inscription_ajouter_image"
        android:layout_width="68dp"
        android:layout_height="70dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="64dp"
        android:text="@string/inscription_ajouter_image"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retour" />

    <TextView
        android:id="@+id/TitleAjouterUneImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:text="Ajouter une photo"
        android:textColor="#4DFFFFFF"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription_ajouter_image" />

    <EditText
        android:id="@+id/inscriptionmail"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/inscriptionmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/TEXT"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleAjouterUneImage"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/inscriptionpassword1"
        android:layout_width="286dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:backgroundTint="@color/TEXT"
        android:ems="10"
        android:hint="@string/inscriptionpassword1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/TEXT"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inscriptionmail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inscriptionpassword2"
        android:layout_width="289dp"

        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/inscriptionpassword2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/TEXT"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscriptionpassword1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="285dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/inscriptionmnom"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/TEXT"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscriptionpassword2"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/incriptionadresse"
        android:layout_width="290dp"
        android:layout_height="41dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:ems="10"

        android:hint="@string/inscriptionadresse"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/TEXT"
        android:textColorHint="#4DFFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/inscription_bouton_confiramtion"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/light_blue_400"
        android:text="Confirmation"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incriptionadresse"
        tools:ignore="TextContrastCheck" />






</androidx.constraintlayout.widget.ConstraintLayout>